tenzir/integration/data/reference/cron/test_cron_errors/step_00.ref
error: the file `./this-file-does-not-exist.json` does not exist
 --> <input>:1:28
  |
1 | cron "* * * * * *", { from "./this-file-does-not-exist.json" }
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |